refactor: update getInfo method